SemanticAnalyzer/tests/success/clase_metodo_sentencia_while.java
class A {
	dynamic boolean methodb1 (Objeto o1, Objeto o2)
		var String s1, s2;
		var int a, b;
		var boolean condicion;
	{
		while(!condicion) {

			a = 0;
			b = 0;

			while(a == b) {
				s1 = "una cadena";
				return true;					
			}
			condicion = false;
		}
	}
}

class Objeto {
	static void main()
	{
	}
}
