SemanticAnalyzer/tests/fail/invocacion_metodo_static.java

class A {

    static boolean methodb1(Objeto o1, Objeto o2)
    var Objeto o3, o4;
		var String s1 , s2;

    {
    }
    dynamic

    int methodi1() {
    }
}

class Objeto {

    static void main()
    var A a;
	var int i;

    {
        (methodi1());
    }
    dynamic

    int methodi1() {
    }
}
